add script to track items

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 log/
 deliveries/*.xml
-upload/
-newspaper_to_upload/
-upload_islam/
-upload_islam2/
-upload_91/
+upload*/
 vendor/
 tmp/
 backup/
 *.yml
 *.marshal
 *.csv
+*.xls*
+*.yml
+results/
+*.txt
